[project]
name = "15-langgraph-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "arxiv>=2.4.0",
    "google-api-python-client>=2.128.0",
    "google-auth-httplib2>=0.3.0",
    "google-auth-oauthlib>=1.3.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.16",
    "langchain-openai>=1.1.10",
    "langchain-qdrant>=1.1.0",
    "langchain-tavily>=0.2.17",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.0.10",
    "langgraph-cli[inmem]>=0.4.12",
    "langgraph-sdk>=0.3.9",
    "langsmith>=0.7.9",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.17.0",
    "tiktoken>=0.12.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
